@@ -1,4 +1,6 @@
 DIST tpacpi-bat 9632 SHA256 8b59d45058a4cbaf56ed75a4682934c9439e3f4bd8bfc37cef1dc5ad584392b8 SHA512 02552e34139feb6cd44f2bd30e3b912fb219cf0c49738c8112d3edbf66f9ca713dcf41f25533ddc5a05b548241f8ccc748b4578c7bab12d83daa9ba73a4047a0 WHIRLPOOL 9c20f08b95399add213d78351db209c912a362ab87e894cf346d0a42da4a027ecfe8d1e1047102e0d79cc3159b2e875f359001092c452ba010515e0a79f51897
+DIST tpacpi-bat-2011-r1 9632 SHA256 8b59d45058a4cbaf56ed75a4682934c9439e3f4bd8bfc37cef1dc5ad584392b8 SHA512 02552e34139feb6cd44f2bd30e3b912fb219cf0c49738c8112d3edbf66f9ca713dcf41f25533ddc5a05b548241f8ccc748b4578c7bab12d83daa9ba73a4047a0 WHIRLPOOL 9c20f08b95399add213d78351db209c912a362ab87e894cf346d0a42da4a027ecfe8d1e1047102e0d79cc3159b2e875f359001092c452ba010515e0a79f51897
+EBUILD tpacpi-bat-2011-r1.ebuild 917 SHA256 15ac35b7cb117354a57318342ceb3783471623b7ffd7b53403ee9fa001b1c690 SHA512 6ee9c47bac35bcb1115582baeb59a00f8c4c77a42b4a374e561cbc11bd685a55a4057868c4a0d53f50b6b474cec86c5f6fccb5c7496b63cc937aa838238e274d WHIRLPOOL ff8983313175048751917ad4b53b03de837bc9bdf14561403bf99124e8f30d947285fabc1f8e2d6abc3390075d37421da221235787a9bfcd26f27f504dbe97d5
 EBUILD tpacpi-bat-2011.ebuild 947 SHA256 623e79d04208b774edc14202edb030d32e3ce45a6b7402076b9ccf6b33dba241 SHA512 01a89e9e4c3b9694dba944512e8c0f4d327bbc6fea86369ac50eacbc8cb832328be9a5451f9c591491d354cbb87cf0faba24954dfe4d1882494ab96f44845cf0 WHIRLPOOL 329fcaf8d313361ff0c09c74a87cbc37575c9dfd591ea53d5b681588a31646645573cfcb708f3ae61320375852c701ad59fef217ee909ebdaf19506b6ae42f1a
-MISC ChangeLog 340 SHA256 55d4814e506bf99299cc91c7ef64aeb440a9e1e63f79333f2f5ad8900a10f79c SHA512 ebba8b803526cbd6d8e0ff56a7792f7f2d7dc5b77f2f43d27d8f4105a2f93834b4e8419eac14e2fab4c1944ac1e32bc1b62157c65c9298e9ff4cba65131f1693 WHIRLPOOL 226bb27be407052c2153ad242810e2bd5ac2b7ca74a867bcb6657f382caaef27609170903020e188c11335b59524a55cfb1526d4187a7f853537f5c809b6f441
+MISC ChangeLog 496 SHA256 0aee90f036b01799e0b303757bcb8123fffea6876a9f6ee5e9a5a68da5034394 SHA512 b95905a951630ada8bd5db2287959445368cc72c74090a7b4b7d4e0c30a134882241843b8bb8b7fa9ce9719fc62154dfa6bfb6862b6af88953f930fd917b0492 WHIRLPOOL 0da6c5344d0de29f88de33434fa26bca1d01112ec885d937d7d1e1cf441a56e53cc9851930749f05dfd663f8802cefc7e078517989c41e7cc379576b0b8ef66d
 MISC metadata.xml 666 SHA256 398ce2c05bcc4fa31cf578694d5c51d45a9dce56762a1267d7fa0af1dd6819b3 SHA512 74caaa8b665d69016c5dda0d994d203e5055589d0f29b498a6b21c61601681b7f8e45bce78066646a62a6c49ab2b0b29d4c04fcd011b1d0e610006cd58c377c6 WHIRLPOOL e51a96a452d3890e179e4b43a4a8788f7cc80b20911940629428cd5b4dc1318de1bff51e76294219d2c7c1278216baa958b30a8eb76d627d90590c00f1f45d76
